--- a/src/assets/styles/home_block.scss
+++ b/src/assets/styles/home_block.scss
@@ -7,9 +7,8 @@
 .home_block {
 	align-items: center;
 	animation: bgGradient 10s ease infinite;
-	background: linear-gradient(-45deg, $c_gradient_home_start, $c_gradient_home_end, $c_gradient_home_start);
+	background: linear-gradient(-45deg, $c_gradient_home_start, darken($c_theme_cyperpunk, 50%), $c_gradient_home_start);
 	background-size: 400% 400%;
-	border-bottom: 1px solid $c_border;
 	color: #fff;
 	display: flex;
 	flex-direction: column;
