--- a/src/assets/styles/project.scss
+++ b/src/assets/styles/project.scss
@@ -81,31 +81,31 @@
 
 .project_bg_type_1 {
 	&::after {
-		background: linear-gradient(to right, $c_gradient_3, $c_gradient_4);
+		background: linear-gradient(to right, $c_gradient_4, darken($c_gradient_4, 50%));
 	}
 }
 
 .project_bg_type_2 {
 	&::after {
-		background: linear-gradient(to right, $c_gradient_7, $c_gradient_8);
+		background: linear-gradient(to right, $c_gradient_8, darken($c_gradient_8, 50%));
 	}
 }
 
 .project_bg_type_3 {
 	&::after {
-		background: linear-gradient(to right, $c_gradient_11, $c_gradient_12);
+		background: linear-gradient(to right, $c_gradient_11, darken($c_gradient_11, 50%));
 	}
 }
 
 .project_bg_type_4 {
 	&::after {
-		background: linear-gradient(to right, $c_gradient_16, $c_gradient_15);
+		background: linear-gradient(to right, $c_gradient_16, darken($c_gradient_16, 50%));
 	}
 }
 
 .project_bg_type_5 {
 	&::after {
-		background: linear-gradient(to right, $c_gradient_19, $c_gradient_20);
+		background: linear-gradient(to right, $c_gradient_19, darken($c_gradient_19, 50%));
 	}
 }
 
