--- a/src/assets/styles/home_block.scss
+++ b/src/assets/styles/home_block.scss
@@ -7,7 +7,7 @@
 .home_block {
 	align-items: center;
 	animation: bgGradient 10s ease infinite;
-	background: linear-gradient(-45deg, $c_gradient_home_start, darken($c_theme_cyperpunk, 50%), $c_gradient_home_start);
+	background: linear-gradient(-45deg, darken($c_theme_cyperpunk, 50%), $c_theme_cyperpunk, $c_gradient_home_start);
 	background-size: 400% 400%;
 	color: #fff;
 	display: flex;
