--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -5,10 +5,11 @@
 
 // colors
 $c_gradient_1:              #fa5154;
+$c_gradient_11:             #e6c2e8;
 $c_gradient_2:              #99e1fe;
 $c_gradient_8:              #feb9bd;
-$c_gradient_11:             #e6c2e8;
 $c_gradient_home_start:     #070449;
+$c_project_type_5:          #ddb472;
 $c_selected:                #34d955;
 $c_text:                    #707070;
 $c_theme_cyperpunk:         #ee0979;
