--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -390,6 +390,157 @@ html {
 	}
 }
 
+[data-theme="theme_yellow"] {
+	h2 {
+		color: lighten($c_theme_yellow, 10%);
+	}
+
+	h3 {
+		color: lighten($c_theme_yellow, 20%);
+	}
+
+	.btn {
+		&__link {
+			background-color: lighten($c_theme_yellow, 15%);
+			border: 1px solid rgba(#000, .99);
+			color: #000;
+			font-size: 15px;
+			letter-spacing: .26em;
+
+			&:hover {
+				background-color: lighten($c_theme_yellow, 30%);
+			}
+		}
+
+		&__main {
+			border-radius: 0;
+			color: #000;
+			font-size: 15px;
+			padding: 30px 0;
+			z-index: 0;
+
+			&:hover {
+				color: #fff;
+
+				span {
+					&::after {
+						background-color: lighten($c_theme_yellow, 15%);
+						opacity: 1;
+					}
+				}
+			}
+
+			span {
+				border: 1px solid rgba($c_theme_yellow, .99);
+				display: inline-block;
+				padding: 16px 42px;
+				position: relative;
+
+				&::after {
+					background-color: $c_theme_yellow;
+					height: 100%;
+					left: 0;
+					top: 0;
+					transition: $transition;
+					width: 100%;
+				}
+
+				&::before {
+					animation: glowing 20s linear infinite;
+					background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+					background-size: 400%;
+					filter: blur(5px);
+					height: calc(100% + 4px);
+					left: -2px;
+					top: -2px;
+					transition: $transition;
+					width: calc(100% + 4px);
+				}
+			}
+		}
+	}
+
+	.footer {
+		background: linear-gradient(-45deg, $c_theme_yellow, darken($c_theme_yellow, 30%), lighten($c_theme_yellow, 30%), $c_theme_yellow);
+		background-size: 400% 400%;
+		color: #000;
+
+		a,
+		a:visited {
+			color: #000;
+		}
+	}
+
+	.gotop {
+		border-color: $c_theme_yellow;
+
+		&::after,
+		&::before {
+			background-color: $c_theme_yellow;
+		}
+
+		&:hover {
+			background-color: $c_theme_yellow;
+		}
+	}
+
+	.home_block {
+		background: linear-gradient(-45deg, lighten($c_theme_yellow, 30%), darken($c_theme_yellow, 50%), $c_theme_yellow);
+		background-size: 400% 400%;
+	}
+
+	.process {
+		&__item {
+			&::before {
+				color: $c_theme_yellow;
+			}
+		}
+	}
+
+	.social_links {
+		img {
+			filter: invert(100%);
+		}
+	}
+
+	.topmenu {
+		background-color: $c_theme_yellow;
+	}
+
+	.topmenu_list {
+		&__link {
+			color: #000;
+			opacity: 1;
+
+			&::after {
+				background-color: darken($c_theme_yellow, 50%);
+			}
+
+			&.active {
+				color: #fff;
+			}
+		}
+
+		@media #{$mobile} {
+			background-color: lighten($c_theme_yellow, 20%);
+		}
+	}
+
+	.topmenu_mobile {
+		&__toggle {
+			&::after,
+			&::before,
+			> span {
+				background-color: #fff;
+			}
+		}
+	}
+
+	.topmenu_phone {
+		color: #fff;
+	}
+}
+
 .checkbox {
 	cursor: pointer;
 	display: inline-block;
@@ -628,6 +779,10 @@ html {
 
 		&--type-4 {
 			background: linear-gradient(-45deg, $c_theme_forest, lighten($c_theme_forest, 50%));
+		}
+
+		&--type-5 {
+			background: linear-gradient(-45deg, darken($c_theme_yellow, 50%), $c_theme_yellow, lighten($c_theme_yellow, 50%));
 		}
 	}
 
