--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -14,6 +14,7 @@ $c_selected:                #34d955;
 $c_text:                    #707070;
 $c_theme_cyperpunk:         #ee0979;
 $c_theme_forest:            #17520a;
+$c_theme_yellow:            #ffd500;
 
 $fontsFolder:               'assets/fonts/';
 $i:                         'assets/i';
