Projects. Refactoring design

--- a/src/assets/styles/project.scss
+++ b/src/assets/styles/project.scss
@@ -217,3 +217,67 @@
 	width: 100%;
 	z-index: 1;
 }
+
+.projects_list {
+	display: grid;
+	grid-gap: 30px;
+	grid-template-columns: repeat(2, 1fr);
+	position: relative;
+
+	&__link {
+		background-repeat: no-repeat;
+		background-size: cover;
+		display: block;
+		overflow: hidden;
+		position: relative;
+
+		&::after {
+			content: "";
+			display: block;
+			padding: 50% 0 0;
+			position: relative;
+		}
+
+		&::before {
+			background-color: #000;
+			content: "";
+			height: 100%;
+			left: 0;
+			opacity: 0;
+			position: absolute;
+			top: 0;
+			transition: $transition;
+			width: 100%;
+			z-index: 3;
+		}
+
+		&:hover {
+			&::before {
+				opacity: .8;
+			}
+
+			.projects_list {
+				&__title {
+					letter-spacing: .05em;
+					opacity: 1;
+				}
+			}
+		}
+	}
+
+	&__title {
+		color: #fff;
+		display: block;
+		font-size: 24px;
+		font-weight: 800;
+		left: 50%;
+		letter-spacing: 10em;
+		opacity: 0;
+		position: absolute;
+		text-transform: uppercase;
+		top: 50%;
+		transform: translate(-50%,-50%);
+		transition: $transition;
+		z-index: 5;
+	}
+}
