Popup CSS update

--- a/src/assets/styles/popup.scss
+++ b/src/assets/styles/popup.scss
@@ -33,8 +33,10 @@
 
 	&__content {
 		margin: 0 auto;
-		max-width: 94%;
+		max-width: 800px;
+		padding: 0 30px;
 		position: relative;
+		width: 100%;
 		z-index: 3;
 	}
 
