--- a/src/assets/styles/popup.scss
+++ b/src/assets/styles/popup.scss
@@ -33,7 +33,7 @@
 
 	&__content {
 		margin: 0 auto;
-		max-width: 800px;
+		max-width: 900px;
 		padding: 0 30px;
 		position: relative;
 		width: 100%;
@@ -53,6 +53,8 @@
 }
 
 .popup_active {
+	overflow: hidden;
+
 	.popup {
 		display: flex;
 	}
