CSS. Vars update

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -4,11 +4,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;300;400;700;800&display=swap');
 
 // colors
-$c_gradient_1:              #fa5154;
 $c_gradient_11:             #e6c2e8;
+$c_gradient_1:              #fa5154;
 $c_gradient_2:              #99e1fe;
 $c_gradient_8:              #feb9bd;
 $c_gradient_home_start:     #070449;
+$c_main:                    #ee0979;
 $c_project_type_5:          #ddb472;
 $c_selected:                #34d955;
 $c_text:                    #707070;
