--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -9,6 +9,7 @@ $c_gradient_1:              #fa5154;
 $c_gradient_2:              #99e1fe;
 $c_gradient_8:              #feb9bd;
 $c_gradient_home_start:     #070449;
+$c_link_hover:              #0e8da1;
 $c_main:                    #ee0979;
 $c_project_type_5:          #ddb472;
 $c_selected:                #34d955;
