--- a/src/assets/styles/project.scss
+++ b/src/assets/styles/project.scss
@@ -42,6 +42,14 @@
 		width: 100%;
 	}
 
+	&__link {
+		color: $c_main;
+
+		&:hover {
+			color: $c_link_hover;
+		}
+	}
+
 	&__title {
 		align-items: center;
 		display: flex;
@@ -238,3 +246,4 @@
 		grid-template-columns: 1fr;
 	}
 }
+
