--- a/src/assets/styles/btn.scss
+++ b/src/assets/styles/btn.scss
@@ -14,15 +14,15 @@
 	}
 
 	&__close {
+		background-color: #fff;
 		border-radius: 0;
-		border: 1px solid rgba(#000, .99);
-		height: 40px;
+		height: 30px;
 		padding: 0;
 		position: absolute;
-		right: 20px;
-		top: 20px;
+		right: 30px;
+		top: 30px;
 		transition: $transition;
-		width: 40px;
+		width: 30px;
 		z-index: 7;
 
 		&::after,
@@ -30,11 +30,12 @@
 			background-color: #000;
 			content: "";
 			display: block;
-			height: 2px;
-			left: 7px;
+			height: 1px;
+			left: 4px;
 			position: absolute;
-			top: 16px;
-			width: 25px;
+			top: 15px;
+			transition: $transition;
+			width: 22px;
 		}
 
 		&::after {
@@ -46,11 +47,9 @@
 		}
 
 		&:hover {
-			background-color: #000;
-
 			&::after,
 			&::before {
-				background-color: #fff;
+				background-color: $c_main;
 			}
 		}
 	}
