CSS. Add table styles

--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -1,4 +1,3 @@
-
 // should be FIRST
 @import "vars";
 @import "defaults";
@@ -12,6 +11,7 @@
 @import "popup";
 @import "process";
 @import "project";
+@import "table";
 @import "team";
 @import "topmenu";
 
