CSS. Vars add shadow color

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -13,6 +13,7 @@ $c_link_hover:              #0e8da1;
 $c_main:                    #ee0979;
 $c_project_type_5:          #ddb472;
 $c_selected:                #34d955;
+$c_shadow:                  #a11659;
 $c_text:                    #707070;
 $c_theme_cyperpunk:         #ee0979;
 $c_theme_forest:            #17520a;
