--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -47,22 +47,6 @@
 	display: flex;
 }
 
-.table_grill {
-	background: url(/wp-content/uploads/2021/03/grill.png) center center no-repeat scroll transparent;
-	background-size: cover;
-	left: 37%;
-	position: absolute;
-	top: 22%;
-	width: 26%;
-	z-index: 5;
-
-	&::after {
-		content: "";
-		display: block;
-		padding: 50% 0 0;
-	}
-}
-
 .table_options {
 	align-items: flex-start;
 	display: flex;
@@ -70,7 +54,7 @@
 	margin: 0 0 30px;
 
 	&__item {
-		margin: 0 50px 0 0;
+		margin: 0 30px 30px 0;
 	}
 }
 
@@ -199,6 +183,10 @@
 	&.active {
 		display: block;
 	}
+}
+
+.table_title {
+	margin: 0 0 10px;
 }
 
 .table_total {
