--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -51,7 +51,6 @@
 	align-items: flex-start;
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0 0 30px;
 
 	&__item {
 		margin: 0 30px 30px 0;
@@ -159,7 +158,7 @@
 	background-color: #fff;
 	border-radius: 50%;
 	cursor: pointer;
-	display: inline-block;
+	display: none;
 	font-size: 30px;
 	height: 40px;
 	line-height: 40px;
