--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -47,6 +47,16 @@
 	display: flex;
 }
 
+.table_logo {
+	background-size: contain;
+	background: url(#{$icons}/logo_4.svg) no-repeat center scroll transparent;
+	bottom: 10px;
+	height: 40px;
+	position: absolute;
+	right: 10px;
+	width: 30px;
+}
+
 .table_options {
 	align-items: flex-start;
 	display: flex;
