Theme change. Box shadow | dark

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -767,7 +767,7 @@ html {
 
 	&__link {
 		background-color: #000;
-		border: 1px solid #fff;
+		box-shadow: 0 0 3px #000;
 		border-radius: 50%;
 		display: block;
 		height: 24px;
