--- a/src/assets/styles/clock.scss
+++ b/src/assets/styles/clock.scss
@@ -62,11 +62,10 @@
 }
 
 .clock_digital {
-	left: 0;
-	position: absolute;
+	font-size: 22px;
+	font-weight: 700;
+	margin: 1em 0 0;
 	text-align: center;
-	top: 100%;
-	width: 100%;
 }
 
 .clock_list {
