--- a/src/assets/styles/clock.scss
+++ b/src/assets/styles/clock.scss
@@ -2,7 +2,8 @@
 	margin: 0 20px;
 
 	&__title {
-		font-size: 16px;
+		font-size: 22px;
+		font-weight: 700;
 		margin: 0 0 1em;
 		text-align: center;
 	}
@@ -62,7 +63,7 @@
 }
 
 .clock_digital {
-	font-size: 22px;
+	font-size: 16px;
 	font-weight: 700;
 	margin: 1em 0 0;
 	text-align: center;
