--- a/src/assets/styles/clock.scss
+++ b/src/assets/styles/clock.scss
@@ -1,5 +1,5 @@
 .clock {
-	margin: 0 20px;
+	margin: 30px;
 
 	&__title {
 		font-size: 22px;
@@ -72,8 +72,9 @@
 .clock_list {
 	align-items: center;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
-	padding: 250px 0;
+	padding: 0 0 100px;
 }
 
 .clock_number {
