--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -23,8 +23,30 @@
 }
 
 .footer_copyright {
+	align-items: center;
+	display: flex;
+	justify-content: center;
 	font-size: 12px;
 	opacity: .7;
+}
+
+.footer_logo {
+	display: flex;
+	justify-content: center;
+
+	&__link {
+		&:hover {
+			.footer_logo__img {
+				filter: invert(0);
+			}
+		}
+	}
+
+	&__img {
+		filter: invert(100%);
+		transition: $transition;
+		width: 20px;
+	}
 }
 
 .footer_slogan {
