--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,7 +1,7 @@
 // sCSS Document
 // Powered by Denis FOX | dfox@foxartbox.com
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;300;400;700;800&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;300;400;700;800&display=swap');
 
 // colors
 $c_gradient_11:             #e6c2e8;
@@ -33,4 +33,5 @@ $mobile_s:              'only screen and (max-width: 500px)';
 $tablet:                'only screen and (max-width: 1023px)';
 
 // fonts
-$font_main:             'Open Sans', Arial, Helvetica, sans-serif;
+//$font_main:             'Open Sans', Arial, Helvetica, sans-serif;
+$font_main:             Arial, Helvetica, sans-serif;
