Topmenu logo styles

--- a/src/assets/styles/topmenu.scss
+++ b/src/assets/styles/topmenu.scss
@@ -107,6 +107,16 @@
 			z-index: -1;
 		}
 
+		&--logo {
+			opacity: 1;
+
+			img {
+				filter: invert(0);
+				width: 30px;
+				height: 30px;
+			}
+		}
+
 		@media #{$mobile} {
 			padding: 20px 30px;
 			text-align: center;
