--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -1,6 +1,6 @@
 // should be FIRST
-@import "vars";
-@import "defaults";
+@import "_vars";
+@import "_defaults";
 
 @import "about";
 @import "btn";
