--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -567,11 +567,11 @@ html {
 .carousel {
 	&__sr-only {
 		background: rgba(#fff, .5);
-		bottom: 10px;
+		bottom: 0;
 		clip: auto;
 		font-size: 12px;
 		height: auto;
-		margin: 10px auto;
+		margin: 0;
 		padding: 10px;
 		position: absolute;
 		right: 0;
