Forest theme update

--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -8,7 +8,7 @@ $c_gradient_11:             #e6c2e8;
 $c_gradient_1:              #fa5154;
 $c_gradient_2:              #99e1fe;
 $c_gradient_8:              #feb9bd;
-$c_gradient_home_start:     #070449;
+$c_gradient_home_start:     #22235f;
 $c_link_hover:              #0e8da1;
 $c_main:                    #ee0979;
 $c_project_type_5:          #ddb472;
@@ -16,7 +16,7 @@ $c_selected:                #34d955;
 $c_shadow:                  #a11659;
 $c_text:                    #707070;
 $c_theme_cyperpunk:         #ee0979;
-$c_theme_forest:            #17520a;
+$c_theme_forest:            #26d4b9;
 $c_theme_yellow:            #ffd500;
 
 $fontsFolder:               'assets/fonts/';
