Update photo + tatyana project added

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -882,5 +882,20 @@ html {
 	max-width: 980px;
 	padding: 0 30px;
 	width: 100%;
+
+	@media #{$mobile} {
+		padding: 0 10px;
+	}
+}
+
+.wrap2 {
+	margin: 0 auto;
+	max-width: 1980px;
+	padding: 0 30px;
+	width: 100%;
+
+	@media #{$mobile} {
+		padding: 0 10px;
+	}
 }
 // help classes [END]
