--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -9,6 +9,7 @@
 @import "footer";
 @import "home_block";
 @import "owl.carousel";
+@import "paw";
 @import "popup";
 @import "process";
 @import "project";
