Px to rem in H1

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -17,7 +17,7 @@ body {
 
 h1 {
 	color: #fff;
-	font-size: 30px;
+	font-size: 2rem;
 	font-weight: 300;
 	line-height: 1.2;
 	margin: 0 0 1em;
@@ -31,7 +31,7 @@ h2 {
 	animation: letterSpacing 12s ease infinite;
 	color: #000;
 	display: block;
-	font-size: 70px;
+	font-size: 5rem;
 	font-weight: 700;
 	letter-spacing: .1em;
 	line-height: 1.2;
