--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -6,6 +6,12 @@
 	a {
 		color: $c_text;
 	}
+
+	&__content {
+		margin: 0 auto;
+		max-width: 400px;
+		width: 100%;
+	}
 }
 
 .about_list {
@@ -66,9 +72,32 @@
 }
 
 .about_main_img {
+	background-repeat: no-repeat;
+	background-size: cover;
 	border-radius: 50%;
 	display: block;
-	margin: 0 auto 30px;
-	max-width: 350px;
+	margin: 3rem auto;
+	max-width: 25rem;
+	position: relative;
 	width: 100%;
+	z-index: 3;
+
+	&::after {
+		background: radial-gradient(ellipse at center,rgba(#fff,0) 0,rgba(#fff,0) 50%,#fff 70%,#fff 100%);
+		content: "";
+		height: 100%;
+		left: 0;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		z-index: 5;
+	}
+
+	&::before {
+		content: "";
+		display: block;
+		padding: 100% 0 0;
+		position: relative;
+		width: 100%;
+	}
 }
