--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -14,13 +14,13 @@
 	}
 }
 
-.about_list {
+.about_skills {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	margin: 0 auto;
-	min-height: 150px;
-	padding: 30px 0 0;
+	min-height: 9rem;
+	padding: 3rem 0 0;
 
 	&__img {
 		display: block;
@@ -41,8 +41,8 @@
 		}
 
 		&__item {
-			&:has(+ .about_list__item:hover) {
-				.about_list__img {
+			&:has(+ .about_skills__item:hover) {
+				.about_skills__img {
 					filter: inherit;
 					height: 80px;
 					margin: -20px 0 0;
@@ -51,15 +51,15 @@
 			}
 
 			&:hover {
-				.about_list__img {
+				.about_skills__img {
 					filter: inherit;
 					height: 100px;
 					margin: -40px 0 0;
 					width: 100px;
 				}
 
-				+ .about_list__item {
-					.about_list__img {
+				+ .about_skills__item {
+					.about_skills__img {
 						filter: inherit;
 						height: 80px;
 						margin: -20px 0 0;
@@ -67,6 +67,70 @@
 					}
 				}
 			}
+		}
+	}
+}
+
+.about_skills_all {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 1rem auto;
+	max-height: 0;
+	max-width: 30rem;
+	overflow: hidden;
+	position: relative;
+	transition: max-height 1s cubic-bezier(0,1,0,1);
+
+	&__img {
+		display: block;
+		height: 6rem;
+		object-fit: contain;
+		padding: .7rem;
+		transition: $transition;
+		width: 6rem;
+
+		&:hover {
+			padding: 0;
+		}
+	}
+
+	&__item {}
+
+	&__link {
+		&:hover {
+			opacity: .7;
+		}
+	}
+}
+
+.about_skills_more {
+	span {
+		&:first-child {}
+
+		&:last-child {
+			display: none;
+		}
+	}
+}
+
+.about_skills_wrap {
+	&.active {
+		.about_skills_more {
+			span {
+				&:first-child {
+					display: none;
+				}
+
+				&:last-child {
+					display: block;
+				}
+			}
+		}
+
+		.about_skills_all {
+			max-height: 1000px;
+			transition: max-height 1.5s ease-in-out;
 		}
 	}
 }
