--- a/src/assets/styles/btn.scss
+++ b/src/assets/styles/btn.scss
@@ -3,7 +3,7 @@
 	cursor: pointer;
 	display: inline-block;
 	outline: 0 none;
-	padding: 16px 42px;
+	padding: 1rem 3rem;
 	position: relative;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -69,8 +69,8 @@
 	&__main {
 		border-radius: 0;
 		color: #fff;
-		font-size: 15px;
-		padding: 30px 0;
+		font-size: 1rem;
+		padding: 1rem 0;
 		z-index: 0;
 
 		&:hover {
