--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -15,6 +15,12 @@ body {
 	position: relative;
 }
 
+button {
+	background: 0 none;
+	cursor: pointer;
+	outline: 0 none;
+}
+
 h1 {
 	color: #fff;
 	font-size: 2rem;
