--- a/src/assets/styles/topmenu.scss
+++ b/src/assets/styles/topmenu.scss
@@ -156,12 +156,14 @@
 	&__logo {
 		align-items: center;
 		color: #000;
+		cursor: pointer;
 		display: flex;
 		padding: 4px 0;
 		text-decoration: none;
 		transition: $transition;
 
 		img {
+			display: block;
 			height: 40px;
 			filter: invert(100%);
 			margin: 0 10px 0 0;
